--- a/index.html
+++ b/index.html
@@ -201,59 +201,41 @@
     <section>
       <h2>Articles</h2>
       <section>
-        <h3>Papers Under Submission</h3>
-        <div>
-          <dl>
-
-            <dt><b>Formalized Soundness and Completeness of Epistemic and Public Announcement Logic</b></dt>
-            <dd>
-              Asta Halkjær From.
-
-              <i>Journal of Logic and Computation --- Special Issue from the 27th Workshop on Logic, Language,
-                Information and Computation (WoLLIC 2021)</i>,
-
-              <i>Accepted for publication,</i>
-              2022.
-
-
-
-
-              <details>
-                <summary>Abstract.</summary>
-                <p>I strengthen the foundations of epistemic logic by formalizing the family of normal modal logics in
-                  the proof assistant Isabelle/HOL. I define an abstract canonical model over any set of axioms and
-                  formalize completeness-via-canonicity: when the canonical model for the chosen axioms belong to a
-                  certain class of frames, strong completeness over that class follows immediately. I instantiate the
-                  result with logics based on various epistemic principles to obtain completeness results for systems
-                  from K to S5. I then move to a family of public announcement logics (PAL) and prove abstract results
-                  for strong soundness and completeness. I lift the completeness results from epistemic logic to the
-                  setting with public announcements in a modular way. This work formulates the
-                  completeness-via-canonicity technique as a proper theorem and demonstrates its applicability.
-                  Additionally, it succinctly formalizes the requirements for lifting completeness from bare epistemic
-                  logic to the addition of public announcements.</p>
-              </details>
-
-              <details>
-                <summary>BibTeX.</summary>
-                <pre>@article{From21,
-abstract = {I strengthen the foundations of epistemic logic by formalizing the family of normal modal logics in the proof assistant Isabelle/HOL. I define an abstract canonical model over any set of axioms and formalize completeness-via-canonicity: when the canonical model for the chosen axioms belong to a certain class of frames, strong completeness over that class follows immediately. I instantiate the result with logics based on various epistemic principles to obtain completeness results for systems from K to S5. I then move to a family of public announcement logics (PAL) and prove abstract results for strong soundness and completeness. I lift the completeness results from epistemic logic to the setting with public announcements in a modular way. This work formulates the completeness-via-canonicity technique as a proper theorem and demonstrates its applicability. Additionally, it succinctly formalizes the requirements for lifting completeness from bare epistemic logic to the addition of public announcements.},
-author = {Asta Halkj{æ}r From},
-journal = {Journal of Logic and Computation --- Special Issue from the 27th Workshop on Logic, Language, Information and Computation ({WoLLIC} 2021)},
-note = {Accepted for publication},
-published = {Oxford University Press},
-title = {Formalized Soundness and Completeness of Epistemic and Public Announcement Logic},
-year = {2022},
-}</pre>
-              </details>
-            </dd>
-
-          </dl>
-        </div>
-      </section>
-      <section>
         <h3>Publications</h3>
         <div>
           <dl>
+
+<dt><b>Formalized soundness and completeness of epistemic and public announcement logic</b></dt>
+<dd>
+  Asta Halkjær From.
+  
+    <i>Journal of Logic and Computation</i>,
+      
+      
+      2024.
+  
+  DOI: <a href="https://doi.org/10.1093/logcom/exae054">10.1093&#x2F;logcom&#x2F;exae054</a>. 
+  
+  
+  <details>
+    <summary>Abstract.</summary>
+    <p>I strengthen the foundations of epistemic logic by formalizing the family of normal modal logics in the proof assistant Isabelle&#x2F;HOL. I define an abstract canonical model over any set of axioms and formalize completeness-via-canonicity: when the canonical model for the chosen axioms belongs to a certain class of frames, strong completeness over that class follows immediately. I instantiate the result with logics based on various epistemic principles to obtain completeness results for systems from K to S5. I then move to a family of public announcement logics (PAL) and prove abstract results for strong soundness and completeness. I lift the completeness results from epistemic logic to the setting with public announcements in a modular way. This work formulates the completeness-via-canonicity technique as a proper theorem and demonstrates its applicability. Additionally, it succinctly formalizes the requirements for lifting completeness from bare epistemic logic to the addition of public announcements.</p>
+  </details>
+  
+  <details>
+    <summary>BibTeX.</summary>
+    <pre>@article{From24,
+abstract = {{I strengthen the foundations of epistemic logic by formalizing the family of normal modal logics in the proof assistant Isabelle&#x2F;HOL. I define an abstract canonical model over any set of axioms and formalize completeness-via-canonicity: when the canonical model for the chosen axioms belongs to a certain class of frames, strong completeness over that class follows immediately. I instantiate the result with logics based on various epistemic principles to obtain completeness results for systems from K to S5. I then move to a family of public announcement logics (PAL) and prove abstract results for strong soundness and completeness. I lift the completeness results from epistemic logic to the setting with public announcements in a modular way. This work formulates the completeness-via-canonicity technique as a proper theorem and demonstrates its applicability. Additionally, it succinctly formalizes the requirements for lifting completeness from bare epistemic logic to the addition of public announcements.}},
+author = {From, Asta Halkjær},
+doi = {10.1093&#x2F;logcom&#x2F;exae054},
+issn = {0955-792X},
+journal = {Journal of Logic and Computation},
+month = {09},
+title = {{Formalized soundness and completeness of epistemic and public announcement logic}},
+year = {2024},
+}</pre>
+  </details>
+</dd>
 
             <dt><b>Verifying a Sequent Calculus Prover for First-Order Logic with Functions in Isabelle&#x2F;HOL</b>
             </dt>
