--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Asta Halkjær From</title>
   <meta name="description" content="Homepage for Asta Halkjær From">
+  <link href="https://fedi.ahfrom.synology.me/ahfrom" rel="me">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.min.css">
   <style>
     pre {
