--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@
       <section>
         <h3>Local Talks</h3>
         <dl>
+          <dt>How to Speak Logic with your Computer: The Unreasonable Effectiveness of a Machine Assistant</dt>
+          <dd>DIKU Bits, January 2025, University of Copenhagen.</dd>
           <dt><a href="slides/algolog2022.pdf">Generic Epistemic and Public Announcement Logic Completeness Results</a>
           </dt>
-          <dd>Logic & AI @ AlgoLoG seminar, september 2022, DTU Compute, Kongens Lyngby.</dd>
+          <dd>Logic & AI @ AlgoLoG seminar, September 2022, DTU Compute, Kongens Lyngby.</dd>
           <dt><a href="slides/bazaar2022.pdf">Verifying a Sequent Calculus Prover for First-Order Logic with Functions
               in
               Isabelle/HOL</a></dt>
