--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=https://asta.boserup.eu/forest/index/index.xml" />
+    <meta http-equiv="refresh" content="0;url=https://asta.boserup.eu" />
   </head>
 </html>
